--- a/ApiTest/ApiTest.csproj
+++ b/ApiTest/ApiTest.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="OpenAI" Version="1.11.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AiCommunicator\AiCommunicator.csproj" />
+  </ItemGroup>
+
 </Project>
