--- a/ApiTest/ApiTest.csproj
+++ b/ApiTest/ApiTest.csproj
@@ -1,18 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="OpenAI" Version="1.11.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0-preview.3.24172.9"/>
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0-preview.3.24172.9"/>
+        <PackageReference Include="OpenAI" Version="1.11.0"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\AiCommunicator\AiCommunicator.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\AiCommunicator\AiCommunicator.csproj"/>
+    </ItemGroup>
 
 </Project>
